fix(css): language dropdown misaligned

--- a/css_reworks/Vector.css
+++ b/css_reworks/Vector.css
@@ -3244,7 +3244,9 @@ ul.color-ids-list {
 #p-lang-btn .vector-menu-content {
     padding: 0.2rem 0;
     border-width: 0 3px 3px;
-    left: -3px;
+    left: -2px;
+    right: -2px;
+    min-width: unset;
     top: 95%;
 }
 #p-lang-btn .vector-menu-content li {
